--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ html {
 
 :root {
     --PaletteGrey: #0c0c0c;
-    --Palette1: #C8A396;
+    --Palette1: #E3B8AA;
     --Palette2: #DE7254;
     --Palette3: #2FC6A8;
     --Palette4: #AE1E4E;
@@ -351,7 +351,7 @@ nav {
 
 .section-title {
     padding: 10px;
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-family: inconsolata, monospace;
     font-weight: 550;
     text-transform: uppercase;
@@ -419,7 +419,7 @@ nav {
     margin-top: 1rem;
 }
 
-.project-body p {
+.project-p {
     margin-top: 1rem;
     font-size: .85rem;
     letter-spacing: .03rem;
