--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,14 +398,21 @@ nav {
     font-size: 1.2rem;
     font-family: inconsolata, monospace;
     text-align: center;
-    /* background-color: #FFFFFF;
+}
+
+.project-techlist {
+    font-weight: 500;
+    font-size: 1rem;
+    font-family: inconsolata, monospace;
+    text-align: center;
+    background-color: #FFFFFF;
     background-image: linear-gradient(270deg, var(--Palette4), var(--Palette2));
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
-    width: fit-content; */
+    /* width: fit-content; */
 }
 
 .project-content,
