--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,13 +405,14 @@ nav {
     font-size: 1rem;
     font-family: inconsolata, monospace;
     text-align: center;
-    background-color: #FFFFFF;
+color: var(--Palette2);
+    /* background-color: #FFFFFF;
     background-image: linear-gradient(270deg, var(--Palette4), var(--Palette2));
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
+    -moz-text-fill-color: transparent; */
     /* width: fit-content; */
 }
 
