--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    text-align: left;
     line-height: 1.5;
     height: 100vh;
 }
